// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DateFromToFilter Rendering From and date selected 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-from"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#0066b1"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#0066b1",
            },
          ]
        }
      >
        2026-01-31
      </Text>
    </View>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#939393",
          "marginHorizontal": 8,
        }
      }
    >
      –
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-to"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#0066b1"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#0066b1",
            },
          ]
        }
      >
        2025-02-15
      </Text>
    </View>
  </View>
</View>
`;

exports[`DateFromToFilter Rendering From date selected 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-from"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#0066b1"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#0066b1",
            },
          ]
        }
      >
        2026-01-31
      </Text>
    </View>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#939393",
          "marginHorizontal": 8,
        }
      }
    >
      –
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-to"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#939393"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#939393",
            },
          ]
        }
      >
        End date
      </Text>
    </View>
  </View>
</View>
`;

exports[`DateFromToFilter Rendering No date selected 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-from"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#939393"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#939393",
            },
          ]
        }
      >
        Start date
      </Text>
    </View>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#939393",
          "marginHorizontal": 8,
        }
      }
    >
      –
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-to"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#939393"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#939393",
            },
          ]
        }
      >
        End date
      </Text>
    </View>
  </View>
</View>
`;

exports[`DateFromToFilter Rendering To date selected 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-from"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#939393"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#939393",
            },
          ]
        }
      >
        Start date
      </Text>
    </View>
  </View>
  <View>
    <Text
      style={
        {
          "color": "#939393",
          "marginHorizontal": 8,
        }
      }
    >
      –
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 0.5,
        "opacity": 1,
      }
    }
    testID="date-filter-field-to"
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f9fafb",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 48,
          "overflow": "hidden",
          "paddingLeft": 16,
        }
      }
    >
      <Icon
        color="#0066b1"
        name="calendar-day"
        size={14}
        type="light"
      />
      <Text
        style={
          [
            {
              "color": "#666666",
              "fontFamily": "Ubuntu",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 20,
              "marginLeft": 8,
            },
            {
              "color": "#0066b1",
            },
          ]
        }
      >
        2025-02-15
      </Text>
    </View>
  </View>
</View>
`;
